# anchorpy-core

./: .bumpversion.cfg  Cargo.toml  pyproject.toml
.github/workflows/: build.yml  release.yml
python/anchorpy3_core/: __init__.py
src/: idl.rs
tests/: test_idl.py
