[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "anchorpy3_core"
version = "0.3.3"
description = "Python bindings for Anchor Rust code"
authors = [
    {name = "Kevin Heavey", email = "kevinheavey123@gmail.com"},
    {name = "Khaled G", email = "kh.grira@gmail.com"}
]
maintainers = [ {name = "Khaled G", email = "kh.grira@gmail.com"} ]
license = {file = "LICENSE"}
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Apache Software License",
    "Development Status :: 4 - Beta",
]
dependencies = ["jsonalias>=0.1.1,<0.2"]
readme = "README.md"

[project.urls]
homepage = "https://github.com/kakagri/anchorpy-core"
documentation = "https://docs.rs/anchorpy_core/"
repository = "https://github.com/kakagri/anchorpy-core"
changelog = "https://github.com/kakagri/anchorpy-core/blob/main/CHANGELOG.md"

[tool.maturin]
python-source = "python"
module-name = "anchorpy_core.anchorpy_core"

[tool.mypy]
enable_recursive_aliases = true
